fix trigger visibility when in browser

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -84,6 +84,10 @@
         }
     }
 
+    .trigger {
+        display :none;
+    }
+
     @include media-query($on-palm) {
         position: absolute;
         top: 9px;
